# cnreader

./: .gitignore  Cargo.toml  README.md  app.toml  rust-analyzer.toml
src/: anki.rs  cedict.rs  chat.rs  config.rs  gui.rs  helper.rs  main.rs
