[package]
name = "cnreader"
version = "0.3.0"
edition = "2024"

[dependencies]
regex = "1.11.*"
serde = { version = "1.0.*", features=["derive"] }
toml = "0.8.20"
elevenlabs_rs = "0.3.2"
anyhow = "1.0.*"
rayon = "1.10.0"
iced = { git = "https://github.com/iced-rs/iced/" , features=["tokio", "advanced","sipper","svg"] }
deepl = "0.6.5"
paddleocr_rs = "0.1.1"
image = "0.25.*"
rfd = "0.15.2"
openai = "1.1.0"
tokio = { version = "^1.40.*", features = ["full"] }
rusqlite = { version = "0.33.0", features=["bundled"] }
chrono = "0.4.*"
shellexpand = "3.1.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
once_cell = "1.21.3"
tokio-stream = "0.1.17"
async-channel = "2.3.1"
reqwest = { version = "0.12.15", features = ["json", "stream"] }

[target.'cfg(target_family = "unix")'.dependencies]
wl-clipboard-rs = "*"

[target.'cfg(target_family = "windows")'.dependencies]
clipboard-win = "5.4.0"
